--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #f4f4f4;
   color: #343434;
   line-height: 1.6em;
-  font-family: Ubuntu;
+  font-family: Helvetica;
   padding: 20px 10px; }
 
 a {
